fix: z-index pop up

--- a/src/app/components/scrollLine.sass
+++ b/src/app/components/scrollLine.sass
@@ -8,3 +8,10 @@
     height: 100vh
 
     overflow: hidden
+
+    > div
+        position: relative
+        $elements: 4
+        @for $i from 0 to $elements
+            &:nth-child(#{$i})
+                z-index: calc(#{$elements} - #{$i})
